# computaciongrafica

./: .gitignore  .travis.yml  CMakeLists.txt  README.md
obligatorio/: README.md
obligatorio/1/: Makefile.linux  Makefile.mac  Obj.c  clean.sh  main.c  readme.md
obligatorio/2/: clean.sh  main.c  readme.md  run.sh
obligatorio/3/: Makefile.linux  Makefile.mac  build.sh  main.c  readme.md
obligatorio/4/: Makefile.linux  Obj.h  build.sh  main.c  readme.md
obligatorio/5/: Makefile.linux  Makefile2.linux  Makefile2.mac  Makefile3.linux  Obj.h  clean2.sh  clean3.sh  main.c  readme.md  run2.sh
obligatorio/Vec/: vec4.c  vec4.h
obligatorio/phong/: Makefile.linux  Makefile.mac  Makefile3.mac  build3.sh  main.c  readme.md
obligatorio/phong/shaders/: phong_fp.glsl  phong_vp.glsl
obligatorio/renderobj/: Makefile.linux  main.c
obligatorio2/: Makefile.linux  Makefile.mac  Makefile2.linux  Makefile2.mac  Vec3.c  Vec3.h  build2.sh  cg_parser.c  cg_parser.h  main.c  readme.md  run.sh
obligatorio2/Escenas_Raytracer/: escena1.txt
practico_0/: Matrix.c  Matrix.h  Matrix4x4.c  Matrix4x4.h  pr0_ej1.c  practico_0.h  readme.md  vec3.c  vec3.h
practico_1/: Makefile.linux  Makefile.mac  Makefile.win32  Obj.c  Obj.h  cg  main.c  main2.c  main3.c  main4.c  main5.c  readme.md
practico_1/framework/: canvas.h  color.h
testSuite/: AllTests.c  CuTest.c  CuTest.h  MatrixUtil.c  StrUtil.c
